--- a/begBug-4.html
+++ b/begBug-4.html
@@ -4,89 +4,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to prepare for your Aprehend Bedbug Service</title>
-    <link rel="stylesheet" href="css/begBug-4.css">
+
 </head>
 <body>
-    <div class="container">
-        <!-- Header Banner -->
-        <div class="header-banner">
-            <h1 class="main-title">How to prepare for your Aprehend Bedbug Service</h1>
-        </div>
+    <table width="100%" cellpadding="20" cellspacing="0" border="0">
+        <tr>
+            <td>
+                <!-- Header Banner -->
+                <table width="100%" cellpadding="20" cellspacing="0" border="0" bgcolor="#c295c7">
+                    <tr>
+                        <td align="center">
+                            <h1 style="font-size: 45px; font-weight: bold; color: #001446; text-align: center; margin: 0; line-height: 1.2; font-family: Arial;">How to prepare for your Aprehend Bedbug Service</h1>
+                        </td>
+                    </tr>
+                </table>
 
-        <!-- Introduction -->
-        <div class="intro-section">
-            <p class="intro-text">
-                For best results, follow the preparation instructions below. More time spent on proper preparation will be rewarded with faster results.
-            </p>
-        </div>
+                <!-- Introduction -->
+                <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                        <td height="30"></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p style="font-size: 20px; color: #000; line-height: 1.5; margin: 0; font-family: Arial;">
+                                For best results, follow the preparation instructions below. More time spent on proper preparation will be rewarded with faster results.
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td height="15"></td>
+                    </tr>
+                </table>
 
-        <!-- Basic Prep Section -->
-        <div class="section">
-            <h2 class="section-title">Basic Prep</h2>
-            <ul class="prep-list">
-                <li>
-                    <strong>Clothes:</strong> Pick up clothes on floors and hanging over chairs and run through a hot dryer cycle for a minimum of 40 minutes. Place these clean, dry clothes in a large garbage bag sealed at the top until the treatment has been completed.
-                </li>
-                <li>
-                    <strong>Dressers and closets:</strong> It is not necessary to remove clean clothing or other items from inside dressers and closets unless these items are clearly heavily infested (visible bed bugs). Ornaments and other items can be left in place.
-                </li>
-                <li>
-                    <strong>Bedding:</strong> Remove all sheets, covers, dust ruffles, comforters, pillows, and any other bedding covers from your mattress and box spring in all bedrooms and run through a hot dryer cycle for a minimum of 40 minutes. Replacing the original bedding without treatment at high heat is likely to reintroduce bed bugs to the treated room, which could result in control failure.
-                </li>
-                <li>
-                    <strong>Cabin beds/beds with built-in storage:</strong> Remove all clothing items from these storage areas and wash in the hottest water possible, and then run through a hot dryer cycle for a minimum of 40 minutes. Place these clean, dry clothes in a large garbage bag sealed at the top until the treatment has been completed.
-                </li>
-                <li>
-                    <strong>De-clutter:</strong> This will assist in removing potential bed bug harborages. Check items for signs of infestation.
-                </li>
-                <li>
-                    <strong>Facilitate perimeter access:</strong> Move all furniture items away from the walls 6-10" to allow access the baseboards and the entire room.
-                </li>
-                <li>
-                    <strong>Baseboards:</strong> Vacuum baseboards to remove dust build-up from these areas. Remove the vacuum cleaner bag or contents of the canister, place in a plastic bag, and dispose of in the trash can outside your apartment/home.
-                </li>
-                <li>
-                    <strong>Pets:</strong> Keep cats and dogs out of treated area while treating and after treatment for 4 hours. Cover fish tanks, terrariums and small animal cages with a clean towel or sheet.
-                </li>
-            </ul>
-        </div>
+                <!-- Basic Prep Section -->
+                <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                        <td>
+                            <h2 style="font-size: 25px; font-weight: bold; color: #1e49d7; margin-bottom: 5px; text-align: left; font-family: Arial;">Basic Prep</h2>
+                            <ul style="list-style: disc; margin-bottom: 0;">
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Clothes:</strong> Pick up clothes on floors and hanging over chairs and run through a hot dryer cycle for a minimum of 40 minutes. Place these clean, dry clothes in a large garbage bag sealed at the top until the treatment has been completed.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Dressers and closets:</strong> It is not necessary to remove clean clothing or other items from inside dressers and closets unless these items are clearly heavily infested (visible bed bugs). Ornaments and other items can be left in place.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Bedding:</strong> Remove all sheets, covers, dust ruffles, comforters, pillows, and any other bedding covers from your mattress and box spring in all bedrooms and run through a hot dryer cycle for a minimum of 40 minutes. Replacing the original bedding without treatment at high heat is likely to reintroduce bed bugs to the treated room, which could result in control failure.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Cabin beds/beds with built-in storage:</strong> Remove all clothing items from these storage areas and wash in the hottest water possible, and then run through a hot dryer cycle for a minimum of 40 minutes. Place these clean, dry clothes in a large garbage bag sealed at the top until the treatment has been completed.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">De-clutter:</strong> This will assist in removing potential bed bug harborages. Check items for signs of infestation.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Facilitate perimeter access:</strong> Move all furniture items away from the walls 6-10" to allow access the baseboards and the entire room.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Baseboards:</strong> Vacuum baseboards to remove dust build-up from these areas. Remove the vacuum cleaner bag or contents of the canister, place in a plastic bag, and dispose of in the trash can outside your apartment/home.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Pets:</strong> Keep cats and dogs out of treated area while treating and after treatment for 4 hours. Cover fish tanks, terrariums and small animal cages with a clean towel or sheet.
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td height="30"></td>
+                    </tr>
+                </table>
 
-        <!-- Important Section -->
-        <div class="section">
-            <h2 class="section-title">Important</h2>
-            <ul class="important-list">
-                <li><strong>DO NOT RE-ENTER TREATED AREAS FOR 4 HOURS AFTER SERVICE.</strong></li>
-                <li><strong>DO NOT SPRAY ANY PESTICIDES OR CLEANING PRODUCTS IN TREATED AREAS AFTER THE TREATMENT. THIS WILL RESULT IN CONTROL FAILURE AND COULD VOID YOUR WARRANTY.</strong></li>
-                <li><strong>DO NOT VACUUM OR CLEAN TREATED AREAS FOR AT LEAST 2 WEEKS AFTER TREATMENT.</strong></li>
-                <li><strong>DO NOT REMOVE OR DISTURB ANY SPRAY RESIDUES ON SURFACES.</strong></li>
-            </ul>
-        </div>
+                <!-- Important Section -->
+                <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                        <td>
+                            <h2 style="font-size: 25px; font-weight: bold; color: #1e49d7; margin-bottom: 5px; text-align: left; font-family: Arial;">Important</h2>
+                            <ul style="list-style: disc;  margin-bottom: 0;">
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;"><strong style="font-weight: bold; color: #000; text-transform: uppercase; font-family: Arial;">DO NOT RE-ENTER TREATED AREAS FOR 4 HOURS AFTER SERVICE.</strong></li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;"><strong style="font-weight: bold; color: #000; text-transform: uppercase; font-family: Arial;">DO NOT SPRAY ANY PESTICIDES OR CLEANING PRODUCTS IN TREATED AREAS AFTER THE TREATMENT. THIS WILL RESULT IN CONTROL FAILURE AND COULD VOID YOUR WARRANTY.</strong></li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;"><strong style="font-weight: bold; color: #000; text-transform: uppercase; font-family: Arial;">DO NOT VACUUM OR CLEAN TREATED AREAS FOR AT LEAST 2 WEEKS AFTER TREATMENT.</strong></li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;"><strong style="font-weight: bold; color: #000; text-transform: uppercase; font-family: Arial;">DO NOT REMOVE OR DISTURB ANY SPRAY RESIDUES ON SURFACES.</strong></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td height="30"></td>
+                    </tr>
+                </table>
 
-        <!-- Please Note Section -->
-        <div class="section">
-            <h2 class="section-title">Please Note</h2>
-            <ul class="note-list">
-                <li>
-                    <strong>Allow the treatment time to work, do not clean or remove the spray barriers.</strong> The Aprehend treatment creates an invisible barrier that bed bugs must cross to reach their food source. This barrier will remain active for up to 3 months and will continue to eliminate bed bugs that come into contact with it.
-                </li>
-                <li>
-                    <strong>Live bed bugs may be visible for 2-3 weeks after the treatment.</strong> This is normal and expected. The treatment works by infecting bed bugs with a natural fungus that takes time to take effect. You may see bed bugs during this period, but they are being affected by the treatment and will eventually die.
-                </li>
-            </ul>
-        </div>
+                <!-- Please Note Section -->
+                <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                        <td>
+                            <h2 style="font-size: 25px; font-weight: bold; color: #1e49d7; margin-bottom: 5px; text-align: left; font-family: Arial;">Please Note</h2>
+                            <ul style="list-style: disc;  margin-bottom: 0;">
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Allow the treatment time to work, do not clean or remove the spray barriers.</strong> The Aprehend treatment creates an invisible barrier that bed bugs must cross to reach their food source. This barrier will remain active for up to 3 months and will continue to eliminate bed bugs that come into contact with it.
+                                </li>
+                                <li style="margin-bottom: 12px; font-size: 16px; line-height: 1.5; color: #000; font-family: Arial;">
+                                    <strong style="font-weight: bold; color: #000; font-family: Arial; font-size: 16px;">Live bed bugs may be visible for 2-3 weeks after the treatment.</strong> This is normal and expected. The treatment works by infecting bed bugs with a natural fungus that takes time to take effect. You may see bed bugs during this period, but they are being affected by the treatment and will eventually die.
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td height="40"></td>
+                    </tr>
+                </table>
 
-        <!-- Contact Information -->
-        <div class="contact-section">
-            <div class="contact-info">
-                <div class="company-name">Simpson Pest Control</div>
-                <div class="address">5565 Red Bird Center Drive</div>
-                <div class="address">Dallas, TX 75237</div>
-                <div class="phone">(214) 814-1440
-
-                </div>
-                <div class="website">www.simpsonpest.com</div>
-            </div>
-        </div>
-    </div>
+                <!-- Contact Information -->
+                <table width="100%" cellpadding="20" cellspacing="0" border="0" style="border-top: 1px solid #eee;">
+                    <tr>
+                        <td align="center">
+                            <table cellpadding="4" cellspacing="0" border="0">
+                                <tr>
+                                    <td align="center" style="font-size: 18px; font-weight: bold; color: #000; line-height: 1.4; font-family: Arial;">Simpson Pest Control</td>
+                                </tr>
+                                <tr>
+                                    <td align="center" style="font-size: 18px; font-weight: bold; color: #000; line-height: 1.4; font-family: Arial;">5565 Red Bird Center Drive</td>
+                                </tr>
+                                <tr>
+                                    <td align="center" style="font-size: 18px; font-weight: bold; color: #000; line-height: 1.4; font-family: Arial;">Dallas, TX 75237</td>
+                                </tr>
+                                <tr>
+                                    <td align="center" style="font-size: 18px; font-weight: bold; color: #000; line-height: 1.4; font-family: Arial;">(214) 814-1440</td>
+                                </tr>
+                                <tr>
+                                    <td align="center" style="font-size: 18px; font-weight: bold; color: #0066cc; line-height: 1.4; font-family: Arial; text-decoration: underline;">www.simpsonpest.com</td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
