--- a/exclusion-3.html
+++ b/exclusion-3.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Home Services Warranty Certificate</title>
-    <link rel="stylesheet" href="css/exclusion/exclusion-3.css">
 </head>
 
-<body>
+<body style="font-family: Arial, sans-serif; background: #fff; margin: 0; padding: 30px; padding-top: 10px;">
 
-    <h1>Simpson Pest Control</h1>
-    <h2>Rodent and Wildlife Exclusion Program<br><span class="heading3">Warranty Certificate</span></h2>
+    <h1 style="text-align: center; color: #001446; font-size: 60px; margin-bottom: 0;">Simpson Pest Control</h1>
+    <h2 style="text-align: center; font-size: 40px; color: #001446; margin-top: 5px; margin-bottom: 30px;">Rodent and Wildlife Exclusion Program<br><span style="color: #c295c7;">Warranty Certificate</span></h2>
 
-    <p class="centeredText"><strong>Thank you for choosing Simpson Pest Control. Due to the
+    <p style="text-align: center; font-size: 14px; line-height: 1.8;"><strong>Thank you for choosing Simpson Pest Control. Due to the
             high demand for this
             service
             Simpson Pest Control is one of the only companies to offer a renewable warranty that continues to protect
             your
             home long after we have solved the initial rodent or wildlife issue. This warranty covers your home for re
-            baiting and trapping for rodent’s, as well as sealing any new entry points if created by rodents or
+            baiting and trapping for rodent's, as well as sealing any new entry points if created by rodents or
             wildlife.
             Exclusion jobs can be quite costly so by offering a renewable warranty we can protect you from another
             possibly
@@ -28,33 +27,33 @@
             exclusion services come with a 30 day rodent trapping program. It is highly recommended that a monthly
             monitoring program be put in place to continue to monitor your home.</strong></p>
 
-    <p class="section-title">Understanding your warranty:</p>
-    <p>You have two options when choosing your warranty.</p>
-    <ol>
+    <p style="font-weight: bold; margin-top: 30px; font-size: 16px; text-decoration: none;">Understanding your warranty:</p>
+    <p style="font-size: 14px; line-height: 1.8;">You have two options when choosing your warranty.</p>
+    <ol style="margin-top: 0; padding-left: 20px; font-size: 14px; line-height: 1.8;">
         <li>Rodent Exclusion Warranty with Simpson Pest Control  Services.</li>
         <li>Rodent Exclusion Warranty without Simpson Pest Control  Services.</li>
     </ol>
-    <p>The coverage for the two are the same. However, the cost is exclusive to the services you have with us that are
+    <p style="font-size: 14px; line-height: 1.8;">The coverage for the two are the same. However, the cost is exclusive to the services you have with us that are
         pre existing or that you purchase along with your exclusion program. Qualifying programs are recurring pest,
         termite, mosquito, or monthly rodent monitoring. Any of these programs count as an ongoing service.</p>
-    <p>Our <strong>Renewable warranty</strong> when not bundled with any of our services will cost you $269.00 yearly
-        <span class="highlight-orange">(Price can vary depending on the square footage of the home)</span>.
+    <p style="font-size: 14px; line-height: 1.8;">Our <strong>Renewable warranty</strong> when not bundled with any of our services will cost you $269.00 yearly
+        <span style="color: #c295c7;">(Price can vary depending on the square footage of the home)</span>.
     </p>
-    <p>If <strong>not bundled</strong> with one of our ongoing services your renewal will cost you $289.00 yearly
-        <span class="highlight-orange">(Price can vary depending on square footage of the home)</span>.
+    <p style="font-size: 14px; line-height: 1.8;">If <strong>not bundled</strong> with one of our ongoing services your renewal will cost you $289.00 yearly
+        <span style="color: #c295c7;">(Price can vary depending on square footage of the home)</span>.
     </p>
 
-    <p>Your annual payment is due 360 days after initial service each year and will continue to be renewed every 360
+    <p style="font-size: 14px; line-height: 1.8;">Your annual payment is due 360 days after initial service each year and will continue to be renewed every 360
         days or until you request that it be canceled. Your warranty is also transferable. If you should choose to sell
         the home or the property should change hands the new resident can have the warranty transferred into their name
         and the coverage will continue as before. There is a $150 transfer fee that is required along with a visual
         inspection to make sure the home is still properly excluded according to the agreement on file.</p>
 
-    <p>This certificate is proof of your coverage, if at any time you wish to cancel the warranty, you must notify
+    <p style="font-size: 14px; line-height: 1.8;">This certificate is proof of your coverage, if at any time you wish to cancel the warranty, you must notify
         Simpson Pest Control 30 days prior to your intent to cancel. Canceling by email is acceptable.</p>
 
-    <p class="section-title">What does your warranty cover:</p>
-    <ul>
+    <p style="font-weight: bold; margin-top: 30px; font-size: 16px; text-decoration: none;">What does your warranty cover:</p>
+    <ul style="margin-top: 0; padding-left: 20px; font-size: 14px; line-height: 1.8;">
         <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspSealing any new
             entry points created by rodents or wildlife.</li>
         <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspResealing any entry
@@ -66,53 +65,96 @@
             necessary.</li>
     </ul>
 
-    <p class="section-title">What your warranty does not cover:</p>
-    <ul>
+    <p style="font-weight: bold; margin-top: 30px; font-size: 16px; text-decoration: none;">What your warranty does not cover:</p>
+    <ul style="margin-top: 0; padding-left: 20px; font-size: 14px; line-height: 1.8;">
         <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspTrapping and
             relocation of larger wildlife such as skunks, raccoons, or opossum.</li>
         <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbspOne-way trap
             installation for squirrels and larger wildlife.</li>
     </ul>
 
-    <p><small>*Should you or any outside contractor change, remove, or damage any items or areas sealed during your
+    <p style="font-size: 16px;"><small>*Should you or any outside contractor change, remove, or damage any items or areas sealed during your
             original exclusion, your warranty will be voided and excluded areas will have to be repaired or replaced at
             your cost to have the warranty placed back in good standings.</small></p>
-    <p><small>**Warranty only applies to full exclusion services.</small></p>
+    <p style="font-size: 16px;"><small>**Warranty only applies to full exclusion services.</small></p>
 
-    <div class="checkbox-section">
-        <span>Is this warranty bundled or added onto an existing ongoing service?</span>
-        Yes <input type="checkbox" name="bundle" value="yes">
-        &nbsp;&nbsp;No <input type="checkbox" name="bundle" value="no">
-    </div>
+    <table style="margin-top: 30px; font-size: 16px; width: 100%;">
+        <tr>
+            <td style="padding: 10px 0;">
+                <span style="font-size: 16px;">Is this warranty bundled or added onto an existing ongoing service?</span>
+                Yes <input type="checkbox" name="bundle" value="yes" style="margin-left: 10px; vertical-align: middle;">
+                &nbsp;&nbsp;No <input type="checkbox" name="bundle" value="no" style="margin-left: 10px; vertical-align: middle;">
+            </td>
+        </tr>
+    </table>
 
-    <div class="bottom-section">
-        <div class="form-container">
-            <div class="form-group">
-                <label for="customer">Customer:</label>
-                <input type="text" id="customer">
-            </div>
-
-            <div class="form-group">
-                <label for="account">Account #:</label>
-                <input type="text" id="account">
-            </div>
-
-            <div class="form-group">
-                <label for="inspection">Inspection Date:</label>
-                <input type="text" id="inspection">
-            </div>
-
-            <div class="form-group">
-                <label for="renewal">Renewal Date:</label>
-                <input type="text" id="renewal">
-            </div>
-
-            <div class="form-group">
-                <label for="amount">Renewal Amount:</label>
-                <input type="text" id="amount">
-            </div>
-        </div>
-    </div>
+    <table style="margin-top: 30px; font-size: 10px; width: 100%;">
+        <tr>
+            <td style="padding: 5px;">
+                <table style="width: 100%;">
+                    <tr>
+                        <td style="padding: 5px; width: 50%;">
+                            <table style="width: 100%;">
+                                <tr>
+                                    <td style="font-weight: bold; font-size: 16px; padding-right: 10px;">Customer:</td>
+                                    <td style="width: 60%;">
+                                        <input type="text" id="customer" style="width: 100%; border: none; border-bottom: 2px solid #000; padding: 5px; font-size: 16px; background: transparent;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td style="padding: 5px; width: 50%;">
+                            <table style="width: 100%;">
+                                <tr>
+                                    <td style="font-weight: bold; font-size: 16px; padding-right: 10px;">Account #:</td>
+                                    <td style="width: 60%;">
+                                        <input type="text" id="account" style="width: 100%; border: none; border-bottom: 2px solid #000; padding: 5px; font-size: 16px; background: transparent;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 5px; width: 50%;">
+                            <table style="width: 100%;">
+                                <tr>
+                                    <td style="font-weight: bold; font-size: 16px; padding-right: 10px;">Inspection Date:</td>
+                                    <td style="width: 60%;">
+                                        <input type="text" id="inspection" style="width: 100%; border: none; border-bottom: 2px solid #000; padding: 5px; font-size: 16px; background: transparent;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td style="padding: 5px; width: 50%;">
+                            <table style="width: 100%;">
+                                <tr>
+                                    <td style="font-weight: bold; font-size: 16px; padding-right: 10px;">Renewal Date:</td>
+                                    <td style="width: 60%;">
+                                        <input type="text" id="renewal" style="width: 100%; border: none; border-bottom: 2px solid #000; padding: 5px; font-size: 16px; background: transparent;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 5px; width: 50%;">
+                            <table style="width: 100%;">
+                                <tr>
+                                    <td style="font-weight: bold; font-size: 16px; padding-right: 10px;">Renewal Amount:</td>
+                                    <td style="width: 60%;">
+                                        <input type="text" id="amount" style="width: 100%; border: none; border-bottom: 2px solid #000; padding: 5px; font-size: 16px; background: transparent;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td style="padding: 5px; width: 50%;">
+                            <!-- Empty cell for spacing -->
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
 
 </body>
 
