--- a/termite-2.html
+++ b/termite-2.html
@@ -4,8 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Consumer Information Sheet</title>
-    <link rel="stylesheet" href="css/temite/termite-2.css">
+    <style type="text/css">
+body {
+  font-family: "Arial, sans-serif";
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  padding: 40px;
+  background-color: #fff;
+  color: #000;
+}
 
+.container {
+  margin: 0 auto;
+}
+
+.container h1 {
+  text-align: center;
+  font-size: 35px;
+  margin-bottom: 50px;
+}
+
+.container p {
+  margin-bottom: 30px;
+  text-align: justify;
+  font-size: 22px;
+}
+
+.footer {
+  text-align: center;
+  font-weight: bold;
+  margin-top: 40px;
+}
+
+.bottom-left {
+  float: left;
+  font-size: 14px;
+  margin-top: 30px;
+  font-weight: 700;
+}
+
+.bottom-right {
+  float: right;
+  font-size: 14px;
+  margin-top: 30px;
+  font-weight: 700;
+}
+    </style>
 </head>
 
 <body>
