--- a/termite-3.html
+++ b/termite-3.html
@@ -105,9 +105,23 @@
             <table style="width: 100%; border-collapse: collapse;">
                 <tr>
                     <td width="65%" style="vertical-align: top; padding: 0;">
-                        <div style="width: 100%; height: 425px; border: 2px solid #000; background-color: #fff; position: relative;">
-                            <!-- Grid pattern removed - Field Routes will handle this -->
-                        </div>
+                        <div style="width: 100%; height: 425px; border: 2px solid #000; background-color: #fff; position: relative; background-image: 
+                            linear-gradient(to right, #000 1px, transparent 1px),
+                            linear-gradient(to bottom, #000 1px, transparent 1px),
+                            linear-gradient(to right, #ccc 1px, transparent 1px),
+                            linear-gradient(to bottom, #ccc 1px, transparent 1px);
+                            background-size: 
+                            5% 100%,
+                            100% 14.17%,
+                            2.5% 100%,
+                            100% 3.54%;
+                            background-position: 
+                            0 0,
+                            0 0,
+                            0 0,
+                            0 0;">
+                            <!-- Chart area for drawing - Enhanced grid pattern for better visibility -->
+                            <div style="position: absolute; top: 10px; left: 10px; font-size: 10px; color: #666; font-weight: bold;">DIAGRAM AREA</div>
                         </div>
                     </td>
                     <td style="vertical-align: top; padding: 0;  font-size: 11px;">
